<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar_color">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/sign_in_button">

        <RelativeLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createAccountTitle"
                style="@style/title_large"
                android:layout_alignParentTop="true"
                android:text="@string/signInTitle" />

            <TextView
                android:id="@+id/createAccountSubtitle"
                style="@style/body"
                android:layout_below="@id/createAccountTitle"
                android:text="@string/signInSubtitle" />

            <TextView
                android:id="@+id/email"
                style="@style/body"
                android:layout_below="@id/createAccountSubtitle"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/username" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_username"
                style="@style/form_field"
                android:layout_below="@+id/email"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/password"
                style="@style/body"
                android:layout_below="@id/sign_in_username"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_passwordL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_password"
                    style="@style/form_field"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signInPasswordError"
                style="@style/body"
                android:layout_below="@id/sign_up_passwordL"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:visibility="invisible" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/buttonGray"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:enabled="false"
        android:text="@string/login_button" />

    <ProgressBar
        android:id="@+id/progressbar_sign_in"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>